(lang dune 3.11)

(name clj2js)

(maintainers y2k)

(generate_opam_files true)

(license LICENSE)

(package
 (name clj2js)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends
  ocaml
  dune
  angstrom
  ppx_deriving
  yojson
  ppx_deriving_yojson
  (alcotest :with-test))
 (tags
  (topics "to describe" your project)))
